{
    "name": "New Controls",
    "maps": [
        {
            "name": "MouseControls",
            "id": "d5015281-0a61-4db6-9e1a-b63b0319a6f2",
            "actions": [
                {
                    "name": "MouseVectorInput",
                    "type": "Value",
                    "id": "63708776-bf3d-406c-a080-6e55d34f5e01",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dc81a80c-a779-49b0-a702-eea4b376443a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseVectorInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}